--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
+* {
+  margin: 0;
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  color: unset;
+}
+a {
+  text-decoration: none;
+}
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  min-height: 100vh;
+  margin: 10px 60px;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #fff;
+  border-bottom: 1px solid #bdbdbd;
+  box-sizing: border-box;
+  height: 44px;
+  padding: 4px 20px;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: 28px;
+  color: #000;
+  font-family: Chilanka;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
 }
-
-.App-link {
-  color: #61dafb;
+.App-header > div {
+  height: 24px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.appContainer {
+  margin-top: 124px;
 }
